@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.80 2009/10/14 11:04:35 vapier Exp $
 
+*openrc-0.6.1-r2 (14 Aug 2010)
+
+  14 Aug 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r2.ebuild:
+  New revision of Funtoo core networking stuff - quite a few changes in
+  this release.
+
 *openrc-0.6.1-r1 (10 Aug 2010)
 
   10 Aug 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r1.ebuild:
